[gd_scene load_steps=6 format=3 uid="uid://b5w1afldacdb1"]

[ext_resource type="Theme" uid="uid://dyklcre5xi6tl" path="res://Theme/Theme_Large_Medium_Font.tres" id="1"]
[ext_resource type="StyleBox" uid="uid://dy862pr63em83" path="res://Theme/Custom Button Normal.tres" id="2"]
[ext_resource type="StyleBox" uid="uid://v5vx5bhdcxm4" path="res://Theme/Custom Button Red.tres" id="3"]
[ext_resource type="Script" uid="uid://dxpvmwy2pb070" path="res://CustomButton.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://qetgg583nnuo" path="res://CustomTweenComponent.tscn" id="5"]

[node name="Custom Button" type="Button"]
offset_right = 138.0
offset_bottom = 36.0
size_flags_vertical = 9
theme = ExtResource("1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("2")
theme_override_styles/pressed = ExtResource("3")
theme_override_styles/hover = ExtResource("3")
theme_override_styles/disabled = ExtResource("3")
theme_override_styles/focus = ExtResource("3")
text = "UPGRADES"
script = ExtResource("4")

[node name="CustomTweenComponent" parent="." node_paths=PackedStringArray("base_node") instance=ExtResource("5")]
base_node = NodePath("..")
duration = 0.2
do_scale = true
scale_amount = Vector2(1.05, 1.05)

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
